<resources>
    <string name="app_name">Wifi Translation</string>
    <string name="channel_display_prefix">Channel </string>
    <string name="relay_channel_display_prefix">Relay </string>
    <string name="status">Unavailable</string>
    <string name="channel_button_text">Select</string>
    <string name="relay_channel_button_text">Relay</string>
    <string name="stop_button_text">Stop</string>

    <string name="status_null"></string>
    <string name="status_rx_start">Start</string>
    <string name="status_tx_start">Broadcast</string>
    <string name="status_searching">Searching...</string>
    <string name="status_unavailable">Unavailable</string>
    <string name="status_headphones">Insert headphones</string>
    <string name="status_talk">Talk</string>
    <string name="status_waiting">Waiting...</string>
    <string name="status_rx_run"></string>
    <string name="status_mute">Mute</string>
    <string name="status_unmuted">ON AIR</string>
    <string name="status_muted">Muted</string>
    <string name="status_unmute">Unmute</string>
    <string name="status_no_wifi">Please connect to WiFi</string>

    <string name="channel_text">Channel</string>
    <string name="ch01_text">Channel  1</string>
    <string name="ch02_text">Channel  2</string>
    <string name="ch03_text">Channel  3</string>
    <string name="ch04_text">Channel  4</string>
    <string name="ch05_text">Channel  5</string>
    <string name="ch06_text">Channel  6</string>
    <string name="ch07_text">Channel  7</string>
    <string name="ch08_text">Channel  8</string>
    <string name="ch09_text">Channel  9</string>
    <string name="ch10_text">Channel 10</string>

    <string name="options_switch_TX">Transmit mode</string>
    <string name="options_relay_TX">Relay</string>
    <string name="options_settings">Settings</string>
    <string name="options_about">About...</string>

    <string name="gain_controls_title">Microphone Booster</string>
    <string name="gain_controls_max_gain_db_title">Maximum Microphone Boost</string>
    <string name="gain_controls_increase_db_per_second">Microphone boost increase per second</string>
    <string name="gain_controls_hold_time">Peak limiter hold time</string>

    <string name="network_controls_title">Network</string>
    <string name="network_controls_packet_redundancy">Packet redundancy</string>

    <string name="app_description">Multicast translation over local Wi-Fi</string>
    <string name="app_credits">Brahma Kumaris London IT team</string>

    <string name="perms_alert_test">Please enable the Microphone permission in App Permissions to enable Broadcast</string>
    <string name="multicast_alert">Unfortunately this device does not have multicast enabled in the Linux kernel configuration</string>

    <string name="tx_stop_alert">Stop the broadcast before navigating away</string>
</resources>

