<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="eu.bkwsu.webcast.wifitranslation.MainActivity">

    <Button
        android:id="@+id/button_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/channel_button_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        />

    <Button
        android:id="@+id/button_relay_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relay_channel_button_text"
        android:visibility="invisible"
        app:layout_constraintHorizontal_bias="0.31"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@+id/button_channel"
        tools:layout_editor_absoluteY="0dp" />

    <TextView
        android:id="@+id/text_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="2dp"
        android:text="@string/channel_display_prefix"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_channel"
        app:layout_constraintVertical_bias="0.325" />

    <TextView
        android:id="@+id/text_relay_channel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/relay_channel_display_prefix"
        android:textSize="40sp"
        android:textStyle="bold"
        android:typeface="sans"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_channel"
        app:layout_constraintVertical_bias="0.19" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/stop_button_text"
        style="@style/stopButton"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_channel"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.445" />

    <Button
        android:id="@+id/button_status"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:text="@string/status"
        style="@style/startStopButton"
        android:textColor="@color/colorActionText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_stop"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintVertical_bias="0.804" />

    <SurfaceView
        android:id="@+id/vuMeter"
        android:layout_width="250sp"
        android:layout_height="18dp"
        android:layout_marginBottom="0dp"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/button_stop"
        app:layout_constraintVertical_bias="0.9" />
</android.support.constraint.ConstraintLayout>
